Remove the list reverse command and print each element.

--- a/Git_Aula01.ipynb
+++ b/Git_Aula01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Git-Aula01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMZGIn8UgjLHcdIl7HtCMB5",
+      "authorship_tag": "ABX9TyPEu+NZhCnSmFuaWAkRqS36",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,6 +78,34 @@
           },
           "metadata": {},
           "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for num in lista:\n",
+        "  print(num)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cCUnnJTitMBd",
+        "outputId": "cb6c6832-75cf-48b7-fad7-ec67578eab52"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
         }
       ]
     }
